// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportGradesButton component render Form 1`] = `
<Form
  action="test-grade-export-url"
  method="post"
>
  <Form.Group
    controlId="csv"
  >
    <Form.Control
      className="d-none"
      data-testid="file-control"
      label="Upload Grade CSV"
      onChange={[MockFunction props.handleFileInputChange]}
      type="file"
    />
  </Form.Group>
</Form>
`;

exports[`ImportGradesButton component render snapshot 1`] = `
<Fragment>
  <Form
    action="test-grade-export-url"
    method="post"
  >
    <Form.Group
      controlId="csv"
    >
      <Form.Control
        className="d-none"
        data-testid="file-control"
        label="Upload Grade CSV"
        onChange={[MockFunction props.handleFileInputChange]}
        type="file"
      />
    </Form.Group>
  </Form>
  <NetworkButton
    className="import-grades-btn"
    import={true}
    label={
      {
        "defaultMessage": "Import Grades",
        "description": "A labeled button to import grades in the BulkManagement Tab File Upload Form",
        "id": "gradebook.GradesView.importGradesBtnText",
      }
    }
    onClick={[MockFunction props.handleClickImportGrades]}
  />
</Fragment>
`;
